# pip-toml-private-registry-sample

./: pyproject.toml  requirements.txt
.github/: dependabot.yml
.pip/: pip.conf
