[tool.poetry]
name = "example_project"
version = "0.1.0"
description = "An example Python project."
authors = ["Harihran <thavaahariharangit@github.com>"]
packages = [
    { include = "example_project" }
]

[tool.poetry.dependencies]
structlog = "25.3.0"
python = ">=3.8"

[[tool.poetry.source]]
name = "dependabot-pip"
url = "https://thavaahariharangit@github.com:${secrets.JFROG_ARTIFACTORY_TOKEN}@jfrogghdemo.jfrog.io/artifactory/dependabot-pip"
priority = "explicit"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
