[tool.poetry]
name = "example_project"
version = "0.1.0"
description = "An example Python project."
authors = ["Harihran <thavaahariharangit@github.com>"]
packages = [
    { include = "example_project" }
]

[tool.poetry.dependencies]
thavaahariharangit_project = "0.1.0"

[[tool.poetry.source]]
name = "dependabot-pip"
url = "https://thavaahariharangit@github.com:${secrets.JFROG_ARTIFACTORY_TOKEN}@jfrogghdemo.jfrog.io/artifactory/api/pypi/dependabot-pip/simple"
priority = "primary"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
